updated margins on activities cards and changed breakpoints to help with layout. Also added max-width to stop layout stretching too far

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -1,6 +1,6 @@
-/* For ipad pro-desktop */
+/* ipad pro */
 
-@media only screen and (max-width:1024px){       
+@media only screen and (max-width:1200px){       
 
     /* Reusable components */
 
@@ -68,6 +68,7 @@
     .popular__card {
         width: 30%;
         margin: 1rem 0rem;
+        height: 12rem;
     }
 
     /* Activities */
@@ -94,11 +95,15 @@
         grid-gap: 0.5rem 1.5rem;
     }
 
+    .activities__name {
+        margin: .5rem;
+    }
+
 }
 
 /* ipad */
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 980px) {
 
     /* Reusable components */
 
